--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/AndMak1989/brillGram#readme",
   "dependencies": {
+    "mysql2": "^2.1.0",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
 }
