--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AndMak1989/brillGram#readme",
   "dependencies": {
     "mysql2": "^2.1.0",
+    "puppeteer": "^5.2.1",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
 }
