--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/AndMak1989/brillGram#readme",
   "dependencies": {
+    "moment": "^2.27.0",
     "mysql2": "^2.1.0",
     "puppeteer": "^5.2.1",
-    "selenium-webdriver": "^4.0.0-alpha.7"
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "shelljs": "^0.8.4"
   }
 }
