--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
     "puppeteer": "^5.2.1",
-    "selenium-webdriver": "^4.0.0-alpha.7",
-    "shelljs": "^0.8.4"
+    "selenium-webdriver": "^4.0.0-alpha.7"
   }
 }
